capitalize first letter

--- a/source/_includes/custom/asides/found_on.html
+++ b/source/_includes/custom/asides/found_on.html
@@ -1,5 +1,5 @@
 <section>
-    <h1>found on</h1>
+    <h1>Found on</h1>
     {% if site.github_user  %}
     <a href="https://github.com/{{site.github_user}}/" rel="tooltip" title="Github"><img class="social_icon"
                                                                                          title="Github"
