--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,36 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+.google_plus, .linked_in, .github, .stack_overflow{
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  margin-top: 1px;
+  *margin-right: .3em;
+  line-height: 14px;
+  vertical-align: text-top;
+  background-image: url(/images/SocialNetworkIcon.png);
+  background-position: 14px 14px;
+  background-repeat: no-repeat;
+  @include opacity(0.7);
+}
+
+.google_plus{
+  background-position: -55px 0;
+
+}
+
+.linked_in{
+  background-position: -27px 0;
+
+}
+
+.github{
+  background-position: 0 0;
+}
+
+.stack_overflow{
+  background-position: -82px 0;
+  width: 24px;
+  height: 24px;
+}
+
