--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,6 +1,6 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
-.google_plus, .linked_in, .github, .stack_overflow{
+.google_plus, .linked_in, .github, .stack_overflow {
   display: inline-block;
   width: 24px;
   height: 24px;
@@ -11,20 +11,19 @@
   background-image: url(/images/SocialNetworkIcon.png);
   background-position: 14px 14px;
   background-repeat: no-repeat;
-  @include opacity(0.7);
+  @include transition(opacity .5s ease);
+  @include opacity(0.6);
 }
 
-.google_plus{
+.google_plus {
   background-position: -55px 0;
-
 }
 
-.linked_in{
+.linked_in {
   background-position: -27px 0;
-
 }
 
-.github{
+.github {
   background-position: 0 0;
 }
 
