--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,3 +3,6 @@
 @import "base/theme";
 @import "base/typography";
 @import "base/layout";
+@import "base/bootstrap";
+@import "base/bootstrap-responsive";
+
