remove Background for body

--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -1,3 +1,5 @@
+$bodyBackground: none;
+
 // Here you can easily change your sites's color scheme.
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
