--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -19,3 +19,13 @@
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
+header .title{
+  margin: 0 auto;
+  display: block;
+  width: 415px;
+  @media only screen and (max-width: 480px) {
+    font-size: 1.8em;
+    width: 262px;
+  }
+
+}
