--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -2,6 +2,9 @@ body > nav {
   position: relative;
   background-color: $nav-bg;
   @include background($nav-bg-front, $nav-bg-back);
+  a:hover{
+    text-decoration: none;
+  }
   border: {
     top: 1px solid $nav-border-top;
     bottom: 1px solid $nav-border-bottom; }
